JumpScript/tests/baselines/reference/unusedVariablesinNamespaces1.errors.txt
tests/cases/compiler/unusedVariablesinNamespaces1.jump(2,11): error TS6133: 'lettersRegexp' is declared but its value is never read.


==== tests/cases/compiler/unusedVariablesinNamespaces1.jump (1 errors) ====
    namespace Validation {
        const lettersRegexp = /^[A-Za-z]+$/;
              ~~~~~~~~~~~~~
!!! error TS6133: 'lettersRegexp' is declared but its value is never read.
    }